# splatworld_agent

./: .gitignore  .resolver.sh  README.md  install.sh  pyproject.toml  setup.py
.claude-plugin/: marketplace.json  plugin.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.splatworld/: current_session.json  profile.json  prompt_history.jsonl  sessions.jsonl
commands/: batch.md  cancel.md  convert.md  direct.md  display-links.md  download-splats.md  exit.md  feedback.md  generate.md  help.md  init.md  learn.md  migrate-data.md  profile.md  prompt-history.md  resume-work.md  review.md  train.md  update.md  version.md  worlds.md
prompts/: cancel.md  download-splats.md  exemplar.md  feedback.md  generate.md  help.md  history.md  init.md  learn.md  profile.md  resume.md  review.md  train.md
skills/batch/: SKILL.md
skills/cancel/: SKILL.md
skills/convert/: SKILL.md
skills/direct/: SKILL.md
skills/display-links/: SKILL.md
skills/download-splats/: SKILL.md
skills/exit/: SKILL.md
skills/feedback/: SKILL.md
skills/generate/: SKILL.md
skills/help/: SKILL.md
skills/init/: SKILL.md
skills/learn/: SKILL.md
skills/migrate-data/: SKILL.md
skills/profile/: SKILL.md
skills/prompt-history/: SKILL.md
skills/resume-work/: SKILL.md
skills/review/: SKILL.md
skills/train/: SKILL.md
skills/update/: SKILL.md
skills/version/: SKILL.md
skills/worlds/: SKILL.md
splatworld_agent/: __init__.py  cli.py  config.py  display.py  learning.py  models.py  profile.py
splatworld_agent/core/: __init__.py  marble.py
splatworld_agent/docs/: USAGE.md
splatworld_agent/generators/: __init__.py  flux.py  gemini.py  manager.py  nano.py
splatworld_agent/tui/: __init__.py  apps.py  results.py  (+2 more)
tests/: __init__.py  test_exploration_modes.py  test_models.py  test_profile_batch.py
(+2 files in other folders)
